# aisurface

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASE_HANDOFF.md  ROADMAP.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
case-studies/: _template.md  ziwei-after.json  ziwei-after.md  ziwei-before-after.md  ziwei-before.json  ziwei-before.md  ziwei-v100.md
docs/: FAQ.md
docs/launch/: README.md  jike.md  juejin.md  recruit-dm.md  show-hn.md  twitter.md
docs/process/: PLATFORM-SOURCES.md  PLATFORM-UPDATE-LOG.md  PLATFORM-UPDATE-RUNBOOK.md  README.md  STATE-DISCUSSION-SETUP.md  STATE-DISCUSSION-TEMPLATE.md  TRIAGE.md
docs/superpowers/plans/: 2026-06-03-aisurface-skill-optimization-and-v1-bridge.md  2026-06-03-aisurface-v102-windows-install.md
docs/superpowers/specs/: 2026-06-03-aisurface-v102-windows-install-design.md
evals/: CLAUDE.md  trigger_evals.json
evals/expected/: bad-readme-python-lib.json  good-schema-nextjs-docs.json  minimal-cli-tool.json  perfect-readme-and-docs.json
evals/expected_patches/bad-readme-python-lib/: llms_txt.txt  schema_org.json
evals/fixtures/bad-readme-python-lib/: README.md  pyproject.toml
evals/fixtures/good-schema-nextjs-docs/: README.md  index.schema.json  package.json
evals/fixtures/good-schema-nextjs-docs/.well-known/: llms.txt
evals/fixtures/minimal-cli-tool/: README.md  package.json
evals/fixtures/perfect-readme-and-docs/: README.md  index.schema.json  package.json  pyproject.toml
evals/fixtures/perfect-readme-and-docs/.well-known/: llms.txt
evals/fixtures/perfect-readme-and-docs/docs/: index.md
references/: CLAUDE.md  ai-search-platforms.md  citation-patterns.md  llms-txt-spec.md  readme-checklist.md  schema-templates.md
scripts/: CLAUDE.md  __init__.py  audit.py  cli.py  colors.py  concepts.py  critic.py  distribution.py  doctor.py  findings.py  github_meta.py  llms_txt.py  probe.py  report.py  safe_check.py  safe_dispatch.py  scanner.py  schema_gen.py
scripts/_dev/: render_screenshot.py  verify_demo.py
scripts/fix/: __init__.py  faq.py  llms_txt.py  schema_org.py  when_to_use.py
scripts/verify/: __init__.py  baseline.py  perplexity.py  queries.py
skills/: CLAUDE.md
skills/_deprecated/aisurface-llms-txt/: SKILL.md
skills/_deprecated/aisurface-readme/: SKILL.md
skills/aisurface-llms-txt/: SKILL.md
skills/aisurface-readme/: SKILL.md
tests/: CLAUDE.md  conftest.py
tests/integration/: test_full_audit.py  test_full_fix.py  test_full_verify.py
tests/unit/: test_cli_dispatch.py  test_colors.py  test_critic.py  test_distribution.py  test_doctor.py  test_fix_faq.py  test_fix_llms_txt.py  test_fix_schema_org.py  test_fix_when_to_use.py  test_github_meta.py  test_llms_txt.py  test_report.py  test_safe_check.py  test_safe_dispatch.py  test_scanner.py  test_schema_gen.py  test_smoke.py  test_verify_baseline.py  test_verify_cmd.py  test_verify_perplexity.py  test_verify_protocol.py  test_verify_queries.py
