[project]
name = "aisurface"
version = "1.0.0"
description = "Make your open-source project surface in AI search results"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jay Feng" }]
keywords = ["seo", "geo", "ai-search", "open-source", "llm", "citation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.21",
    "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
aisurface = "scripts.cli:main"

[project.urls]
Homepage = "https://github.com/ruijayfeng/aisurface"
Repository = "https://github.com/ruijayfeng/aisurface"
Changelog = "https://github.com/ruijayfeng/aisurface/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "eval: marks eval tests (deselect with '-m \"not eval\"')",
]
